--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!-- THIS IS A COMMENT -->
-<title>Sample Web Page</title>
+<title>Home Page di Dario Scancarello</title>
 <META charset="utf-8">
 <META name="viewport"
  content="width=device-width, initial-scale=1.0">
@@ -49,14 +49,14 @@ img {
 <br>
 <b>📚 MATERIALE DIDATTICO DI TECNOLOGIA</b>
 <ul>
-<li><a href="#">Classi prime</a>
-<li><a href="#">Classi seconde</a>
-<li><a href="#">Classi terze</a>
+<li><a href="classiprime.html">Classi prime</a>
+<li><a href="classiseconde.html">Classi seconde</a>
+<li><a href="classiterze.html">Classi terze</a>
 </ul>
 <br>
 <b>🌓 ASTRONOMIA</b>
 <ul>
-<li><a href="#">Astro Cards</a>
+<li><a href="astrocards.html">Astro Cards</a>
 </ul>
 <br>
 <hr>
