--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@ img {
       </div>
     </div>
 <hr>
-👋 Ti do il benvenuto nel mio sito personale. Qui puoi trovare materiale riguardante il mio lavoro e i miei interessi.
-<br> 👀 Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media.
-<br> 🔭 Nel tempo libero, fin da bambino, mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo.
-<br>📫 Puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
+Ti do il benvenuto nel mio sito personale. Qui puoi trovare materiale riguardante il mio lavoro e i miei interessi.Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media. Nel tempo libero, fin da bambino, mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo.
+<br>Puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
 <hr>
 <br>
 <b>📚 MATERIALE DIDATTICO DI TECNOLOGIA</b>
