--- a/astrocards.html
+++ b/astrocards.html
@@ -1,40 +1,37 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<!-- THIS IS A COMMENT -->
 <title>Astro Cards</title>
 <META charset="utf-8">
 <META name="viewport"
- content="width=device-width, initial-scale=1.0">
+content="width=device-width, initial-scale=1.0">
 <style>
 body { 
-	max-width: 1024px; 
-	margin: 0 auto !important; 
-	float: none !important; 
- font-family: "Helvetica", "Arial", sans-serif;
- line-height: 1.5;
-  padding: 1em 1em;
+max-width: 1024px; 
+margin: 0 auto !important; 
+float: none !important; 
+font-family: "Helvetica", "Arial", sans-serif;
+line-height: 1.5;
+padding: 1em 1em;
 }
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+display: block;
+margin-left: auto;
+margin-right: auto;
 }
+h2 {text-align: center;}
 </style>
 </head>
-
 <body>
 <a href="index.html">Home</a>
 <hr>
-<center><h2>Schede per l'osservazione degli oggetti più belli del cielo</h2></center>
+<h2>Schede per l'osservazione degli oggetti più belli del cielo</h2>
 Questa è una raccolta di schede osservative che ho sviluppato principalmente per osservare il cielo profondo, anche se in seguito ho voluto inserire anche alcune stelle doppie. Mi piaceva l’idea di realizzare una sorta di programma osservativo valido tutto l’anno per evitare di pianificare la serata poco prima. Pianificare in anticipo è praticamente d’obbligo quando ci si trova a dover decidere l’uscita all’ultimo momento, complice anche l’incertezza delle condizioni meteo.
-<img
- alt="Sample image" 
- title="title=&#34;Text to show when mouse is hovered over this image&#34;"
+<p><img
+ title="immagine"
  src="A.jpg"
-class="center"
- style="width:75%">
-<p>
+ class="center"
+ style="width:75%"><p>
 Ho quindi iniziato a creare delle schede da campo in un comodo formato A5, una per ciascun oggetto, dove ci fosse praticamente tutto il necessario per individuarlo mediante lo star-hopping manuale e per osservarlo avendo come guida una breve descrizione del suo aspetto.
 Le schede sono state concepite per essere stampate e successivamente utilizzate direttamente “sul campo”. Per questo motivo si è scelto di usare il più piccolo e comodo formato A5 e di facilitare la lettura al buio facendo uso esclusivamente del bianco e nero. Se si sceglie di utilizzare un raccoglitore ad anelli, si può staccare la scheda di riferimento e consultarla comodamente e direttamente al telescopio.
 <p>
@@ -47,6 +44,9 @@ Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, sel
 <li><a href="#">Andromeda</a>
 </ul>
 <hr>
-<center><a href="index.html">Home</a></center>
+<div style="text-align:center">
+    <a href="index.html">Home</a> 
+</div>
+
 </body>
 </html>
