--- a/classiprime.html
+++ b/classiprime.html
@@ -20,13 +20,14 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+h2 {text-align: center;}
 </style>
 </head>
 
 <body>
 <a href="index.html">Home</a>
 <hr>
-<center><h2>Materiale didattico di tecnologia per le classi prime</h2></center>
+<h2>Materiale didattico di tecnologia per le classi prime</h2>
 <b>📚 TEORIA</b>
 <ul>
 <li><a href="#">Il Legno</a>
@@ -38,6 +39,8 @@ body {
 </ul>
 <br>
 <hr>
-<center><a href="index.html">Home</a></center>
-</body>  <!-- close the <body> begun above -->
-</html>  <!-- close the <html> begun above -->
+<div style="text-align:center">
+    <a href="index.html">Home</a> 
+</div>
+</body>
+</html>
