--- a/astrocards.html
+++ b/astrocards.html
@@ -19,26 +19,31 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 }
-h2 {text-align: center;}
+.masthead h4{text-align: center;margin-bottom:30px;}
+.masthead h2 {text-align: center;margin-bottom:-10px;}
 </style>
 </head>
 <body>
 <a href="index.html">Home</a>
 <hr>
+ <div class="masthead">
 <h2>Schede per l'osservazione degli oggetti più belli del cielo</h2>
+<h4><i>Dario Scancarello</i></h4>
+</div>
 Questa è una raccolta di schede osservative che ho sviluppato principalmente per osservare il cielo profondo, anche se in seguito ho voluto inserire anche alcune stelle doppie. Mi piaceva l’idea di realizzare una sorta di programma osservativo valido tutto l’anno per evitare di pianificare la serata poco prima. Pianificare in anticipo è praticamente d’obbligo quando ci si trova a dover decidere l’uscita all’ultimo momento, complice anche l’incertezza delle condizioni meteo.
 <p><img
  title="immagine"
  src="A.jpg"
  class="center"
- style="width:75%"><p>
+ style="width:75%"></p>
 Ho quindi iniziato a creare delle schede da campo in un comodo formato A5, una per ciascun oggetto, dove ci fosse praticamente tutto il necessario per individuarlo mediante lo star-hopping manuale e per osservarlo avendo come guida una breve descrizione del suo aspetto.
 Le schede sono state concepite per essere stampate e successivamente utilizzate direttamente “sul campo”. Per questo motivo si è scelto di usare il più piccolo e comodo formato A5 e di facilitare la lettura al buio facendo uso esclusivamente del bianco e nero. Se si sceglie di utilizzare un raccoglitore ad anelli, si può staccare la scheda di riferimento e consultarla comodamente e direttamente al telescopio.
 <p>
 Il metodo per creare le schede è molto standardizzato e il sistema “a schede tipo” ha il vantaggio di poter sempre ampliare il numero di oggetti catalogati semplicemente creando una nuova scheda e ordinandola una di seguito all’altra per costellazione e per ascensione retta (in ordine di transito al meridiano). 
+</p>
 <p>
 Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, selezionati tra quelli più spettacolari.
-<p>
+</p>
 <b>Di seguito i link per scaricare le schede in formato PDF:</b>
 <ul>
 <li><a href="#">Andromeda</a>
@@ -47,6 +52,5 @@ Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, sel
 <div style="text-align:center">
     <a href="index.html">Home</a> 
 </div>
-
 </body>
 </html>
