--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@ img {
       </div>
     </div>
 <hr>
-Ti do il benvenuto nel mio sito personale. Qui puoi trovare materiale riguardante il mio lavoro e i miei interessi.
-<br>
-Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media. Nel tempo libero mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo.
-<br>
-Puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
+<p>
+Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media. Nel tempo libero mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo. In questo sito puoi trovare materiale riguardante il mio lavoro e i miei interessi.<br>
+Se desideri, puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
+</p>
 <hr>
 <br>
 <b>📚 MATERIALE DIDATTICO DI TECNOLOGIA</b>
@@ -57,8 +56,7 @@ Puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email
 <br>
 <b>🌓 ASTRONOMIA</b>
 <ul>
-<li><a href="astrocards.html">Astro Cards</a>: aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa
-<li><a href="astrocards.html">Astro Cards</a></dt>
+<li><a href="astrocards.html">Astro Cards</a>: schede da stampare in formato PDF per l'osservazione degli oggetti più belli del cielo.
 </ul>
 <br>
 <hr>
