--- a/astrocards.html
+++ b/astrocards.html
@@ -19,16 +19,20 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 }
-.masthead h4{text-align: center;margin-bottom:30px;}
-.masthead h2 {text-align: center;margin-bottom:-10px;}
+.frontespizio h1 {text-align: center;margin-bottom:-25px;}
+.frontespizio h2 {text-align: center;margin-bottom:-20px;}
+.frontespizio h3 {text-align: center;margin-bottom:-15px;}
+.frontespizio h4 {text-align: center;font-weight:normal;margin-bottom:-20px;}
 </style>
 </head>
 <body>
 <a href="index.html">Home</a>
 <hr>
- <div class="masthead">
-<h2>Schede per l'osservazione degli oggetti più belli del cielo</h2>
-<h4><i>Dario Scancarello</i></h4>
+<div class="frontespizio">
+<h1>Astro Cards</h1>
+<h3>Schede per l'osservazione degli oggetti più belli del cielo</h3>
+<h4><i><a href="mailto:scandari@gmail.com">Dario Scancarello</a></i></h4>
+<br><br>
 </div>
 Questa è una raccolta di schede osservative che ho sviluppato principalmente per osservare il cielo profondo, anche se in seguito ho voluto inserire anche alcune stelle doppie. Mi piaceva l’idea di realizzare una sorta di programma osservativo valido tutto l’anno per evitare di pianificare la serata poco prima. Pianificare in anticipo è praticamente d’obbligo quando ci si trova a dover decidere l’uscita all’ultimo momento, complice anche l’incertezza delle condizioni meteo.
 <p><img
