--- a/classiprime.html
+++ b/classiprime.html
@@ -21,13 +21,21 @@ body {
   margin-right: auto;
 }
 h2 {text-align: center;}
+.frontespizio h1 {text-align: center;margin-bottom:-25px;}
+.frontespizio h2 {text-align: center;margin-bottom:-20px;}
+.frontespizio h3 {text-align: center;margin-bottom:-15px;}
+.frontespizio h4 {text-align: center;font-weight:normal;margin-bottom:-20px;}
 </style>
 </head>
 
 <body>
 <a href="index.html">Home</a>
 <hr>
+<div class="frontespizio">
 <h2>Materiale didattico di tecnologia per le classi prime</h2>
+<h4><i><a href="mailto:scandari@gmail.com">Prof. Dario Scancarello</a></i></h4>
+<br><br>
+</div>
 <b>📚 TEORIA</b>
 <ul>
 <li><a href="#">Il Legno</a>
@@ -35,7 +43,7 @@ h2 {text-align: center;}
 <br>
 <b>📐 DISEGNO</b>
 <ul>
-<li><a href="#">Le attrezzature per il disegno</a>
+<li><a href="#">Materiali e attrezzature necessarie</a>
 </ul>
 <br>
 <hr>
