--- a/classiterze.html
+++ b/classiterze.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!-- THIS IS A COMMENT -->
-<title>Classi terze</title>
+<title>Classi prime</title>
 <META charset="utf-8">
 <META name="viewport"
  content="width=device-width, initial-scale=1.0">
@@ -21,21 +21,29 @@ body {
   margin-right: auto;
 }
 h2 {text-align: center;}
+.frontespizio h1 {text-align: center;margin-bottom:-25px;}
+.frontespizio h2 {text-align: center;margin-bottom:-20px;}
+.frontespizio h3 {text-align: center;margin-bottom:-15px;}
+.frontespizio h4 {text-align: center;font-weight:normal;margin-bottom:-20px;}
 </style>
 </head>
 
 <body>
 <a href="index.html">Home</a>
 <hr>
+<div class="frontespizio">
 <h2>Materiale didattico di tecnologia per le classi terze</h2>
+<h4><i><a href="mailto:scandari@gmail.com">Prof. Dario Scancarello</a></i></h4>
+<br><br>
+</div>
 <b>📚 TEORIA</b>
 <ul>
-<li><a href="#">L'energia</a>
+<li><a href="#">Il Legno</a>
 </ul>
 <br>
 <b>📐 DISEGNO</b>
 <ul>
-<li><a href="#">Le assonometrie</a>
+<li><a href="#">Le attrezzature per il disegno</a>
 </ul>
 <br>
 <hr>
