--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ img {
     </div>
 <hr>
 <p>
-Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media. Nel tempo libero mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo. In questo sito puoi trovare materiale riguardante il mio lavoro e i miei interessi.<br>
-Se desideri, puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
+Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia nella scuola media. Nel tempo libero mi dedico alla mia passione: l'astronomia amatoriale e l'osservazione del cielo. In questo sito puoi trovare materiale riguardante il mio lavoro e i miei interessi. Se desideri, puoi contattarmi mandando una mail a questo indirizzo: <a href="mailto:tua@email.com">scandari@gmail.com</a>
 </p>
 <hr>
 <br>
@@ -54,7 +53,7 @@ Se desideri, puoi contattarmi mandando una mail a questo indirizzo: <a href="mai
 <li><a href="classiterze.html">Classi terze</a>
 </ul>
 <br>
-<b>🌓 ASTRONOMIA</b>
+<b>⭐ ASTRONOMIA PRATICA</b>
 <ul>
 <li><a href="astrocards.html">Astro Cards</a>: schede da stampare in formato PDF per l'osservazione degli oggetti più belli del cielo.
 </ul>
