--- a/astrocards.html
+++ b/astrocards.html
@@ -30,7 +30,7 @@ margin-right: auto;
 <hr>
 <div class="frontespizio">
 <h1>Astro Cards</h1>
-<h3>Schede per l'osservazione degli oggetti più belli del cielo</h3>
+<h3>schede per l'osservazione degli oggetti più belli del cielo</h3>
 <h4><i><a href="mailto:scandari@gmail.com">Dario Scancarello</a></i></h4>
 <br><br>
 </div>
