--- a/astrocards.html
+++ b/astrocards.html
@@ -52,6 +52,26 @@ Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, sel
 <ul>
 <li><a href="#">Andromeda</a>
 </ul>
+        <table style="width:75%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
+border="1">
+            <tr>
+  <th style="width:20%;text-align: center;padding: 5px;">Name</th>
+  <th style="width:80%;text-align: center;padding: 5px;">Type</th>
+             
+            </tr>
+            <tr>
+                <td style="text-align: center;padding: 5px;">Alice</td>
+
+                <td>A</td>
+            </tr>
+            <tr>
+                 <td style="padding: 5px;">Alice</td>
+                <td>C</td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
 <hr>
 <div style="text-align:center">
     <a href="index.html">Home</a> 
