--- a/astrocards.html
+++ b/astrocards.html
@@ -48,25 +48,26 @@ Il metodo per creare le schede è molto standardizzato e il sistema “a schede 
 <p>
 Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, selezionati tra quelli più spettacolari.
 </p>
-<b>Di seguito i link per scaricare le schede in formato PDF:</b>
-<ul>
-<li><a href="#">Andromeda</a>
-</ul>
-        <table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
+<h3>DOWNLOAD</h3>
+<table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
 border="1">
             <tr>
-  <th style="width:20%;text-align: center;padding: 5px;">Name</th>
-  <th style="width:80%;text-align: center;padding: 5px;">Type</th>
-             
+  <th style="width:55%;text-align: center;padding: 5px;">Costellazione</th>
+  <th style="width:15%;text-align: center;padding: 5px;">Versione</th>
+  <th style="width:15%;text-align: center;padding: 5px;">A5</th>
+  <th style="width:15%;text-align: center;padding: 5px;">A4</th>            
             </tr>
             <tr>
-                <td style="text-align: center;padding: 5px;">Alice</td>
-
-                <td>A</td>
+                <td style="text-align: left;padding: 5px;">Triangulum Australe</td>
+		<td style="text-align: center;padding: 5px;">15/08/2023</td>
+                <td style="text-align: center;padding: 5px;"><a href="#">A5</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">A4</a></td>
             </tr>
             <tr>
-                 <td style="padding: 5px;">Alice</td>
-                <td>C</td>
+                <td style="text-align: left;padding: 5px;">Alice2</td>
+		<td style="text-align: center;padding: 5px;">15/08/2023</td>
+                <td style="text-align: center;padding: 5px;">LinkA5</td>
+                <td style="text-align: center;padding: 5px;">LinkA4</td>
             </tr>
         </table>
     </div>
