--- a/astrocards.html
+++ b/astrocards.html
@@ -49,25 +49,35 @@ Il metodo per creare le schede è molto standardizzato e il sistema “a schede 
 Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, selezionati tra quelli più spettacolari.
 </p>
 <h3>DOWNLOAD</h3>
-<table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
+<table style="width:75%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
 border="1">
             <tr>
-  <th style="width:55%;text-align: center;padding: 5px;">Costellazione</th>
+  <th style="width:45%;text-align: center;padding: 5px;">Costellazione</th>
+  <th style="width:10%;text-align: center;padding: 5px;">Sigla</th>
   <th style="width:15%;text-align: center;padding: 5px;">Versione</th>
   <th style="width:15%;text-align: center;padding: 5px;">A5</th>
   <th style="width:15%;text-align: center;padding: 5px;">A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Triangulum Australe</td>
+                <td style="text-align: left;padding: 5px;">Andromeda</td>
+		<td style="text-align: center;padding: 5px;">And</td>
 		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;"><a href="#">A5</a></td>
-                <td style="text-align: center;padding: 5px;"><a href="#">A4</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">And-A5.pdf</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">And-A4.pdf</a></td>
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Alice2</td>
+                <td style="text-align: left;padding: 5px;">Antilia</td>	
+		<td style="text-align: center;padding: 5px;">Ant</td>
 		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;">LinkA5</td>
-                <td style="text-align: center;padding: 5px;">LinkA4</td>
+                <td style="text-align: center;padding: 5px;">Ant</td>
+                <td style="text-align: center;padding: 5px;">Ant</td>
+            </tr>
+            <tr>
+                <td style="text-align: left;padding: 5px;">Aquarius</td>
+		<td style="text-align: center;padding: 5px;">Aqr</td>
+		<td style="text-align: center;padding: 5px;">15/08/2023</td>
+                <td style="text-align: center;padding: 5px;">Aqr</td>
+                <td style="text-align: center;padding: 5px;">Aqr</td>
             </tr>
         </table>
     </div>
