--- a/astrocards.html
+++ b/astrocards.html
@@ -48,32 +48,36 @@ Il metodo per creare le schede è molto standardizzato e il sistema “a schede 
 <p>
 Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, selezionati tra quelli più spettacolari.
 </p>
-<h3>DOWNLOAD</h3>
+<h3>DOWNLOAD PDF</h3>
 <table style="width:75%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
 border="1">
             <tr>
-  <th style="width:70%;text-align: center;padding: 5px;">Costellazione</th>
-  <th style="width:10%;text-align: center;padding: 5px;">Versione</th>
-  <th style="width:10%;text-align: center;padding: 5px;">A5</th>
-  <th style="width:10%;text-align: center;padding: 5px;">A4</th>            
+  <th style="width:29%;text-align: center;padding: 5px;">Costellazione</th>
+  <th style="width:10%;text-align: center;padding: 5px;">Sigla</th>
+  <th style="width:15%;text-align: center;padding: 5px;">Rev.</th>
+  <th style="width:23%;text-align: center;padding: 5px;">Schede A5</th>
+  <th style="width:23%;text-align: center;padding: 5px;">Schede A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Coma Berenices</td>
+                <td style="text-align: left;padding: 5px;">Coma berenices</td>
+		<td style="text-align: center;padding: 5px;">And</td>
 		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;"><a href="#">And</a></td>
-                <td style="text-align: center;padding: 5px;"><a href="#">And</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">And-A5.pdf</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">And-A4.pdf</a></td>
             </tr>
             <tr>
                 <td style="text-align: left;padding: 5px;">Antilia</td>	
+		<td style="text-align: center;padding: 5px;">Ant</td>
 		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;">Ant</td>
-                <td style="text-align: center;padding: 5px;">Ant</td>
+                <td style="text-align: center;padding: 5px;">Ant-A5</td>
+                <td style="text-align: center;padding: 5px;">Ant-A4</td>
             </tr>
             <tr>
                 <td style="text-align: left;padding: 5px;">Aquarius</td>
+		<td style="text-align: center;padding: 5px;">Aqr</td>
 		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;">Aqr</td>
-                <td style="text-align: center;padding: 5px;">Aqr</td>
+                <td style="text-align: center;padding: 5px;">Aqr-A5</td>
+                <td style="text-align: center;padding: 5px;">Aqr-A4</td>
             </tr>
         </table>
     </div>
