--- a/astrocards.html
+++ b/astrocards.html
@@ -52,30 +52,26 @@ Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, sel
 <table style="width:75%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
 border="1">
             <tr>
-  <th style="width:29%;text-align: center;padding: 5px;">Costellazione</th>
+  <th style="width:36%;text-align: center;padding: 5px;">Costellazione</th>
   <th style="width:10%;text-align: center;padding: 5px;">Sigla</th>
-  <th style="width:15%;text-align: center;padding: 5px;">Rev.</th>
-  <th style="width:23%;text-align: center;padding: 5px;">Schede A5</th>
-  <th style="width:23%;text-align: center;padding: 5px;">Schede A4</th>            
+  <th style="width:27%;text-align: center;padding: 5px;">Schede A5</th>
+  <th style="width:27%;text-align: center;padding: 5px;">Schede A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Coma berenices</td>
+                <td style="text-align: left;padding: 5px;">Coma Berenices</td>
 		<td style="text-align: center;padding: 5px;">And</td>
-		<td style="text-align: center;padding: 5px;">15/08/2023</td>
-                <td style="text-align: center;padding: 5px;"><a href="#">And-A5.pdf</a></td>
+                <td style="text-align: center;padding: 5px;"><a href="#">And1-A5.pdf</a></td>
                 <td style="text-align: center;padding: 5px;"><a href="#">And-A4.pdf</a></td>
             </tr>
             <tr>
                 <td style="text-align: left;padding: 5px;">Antilia</td>	
 		<td style="text-align: center;padding: 5px;">Ant</td>
-		<td style="text-align: center;padding: 5px;">15/08/2023</td>
                 <td style="text-align: center;padding: 5px;">Ant-A5</td>
                 <td style="text-align: center;padding: 5px;">Ant-A4</td>
             </tr>
             <tr>
                 <td style="text-align: left;padding: 5px;">Aquarius</td>
 		<td style="text-align: center;padding: 5px;">Aqr</td>
-		<td style="text-align: center;padding: 5px;">15/08/2023</td>
                 <td style="text-align: center;padding: 5px;">Aqr-A5</td>
                 <td style="text-align: center;padding: 5px;">Aqr-A4</td>
             </tr>
