--- a/astrocards.html
+++ b/astrocards.html
@@ -58,7 +58,7 @@ border="1">
   <th style="width:27%;text-align: center;padding: 5px;">Schede A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Coma Berenices</td>
+                <td style="text-align: left;padding: 5px;">Coma Byrenices</td>
 		<td style="text-align: center;padding: 5px;">And</td>
                 <td style="text-align: center;padding: 5px;"><a href="#">And1-A5.pdf</a></td>
                 <td style="text-align: center;padding: 5px;"><a href="#">And-A4.pdf</a></td>
