--- a/astrocards.html
+++ b/astrocards.html
@@ -34,6 +34,15 @@ margin-right: auto;
 <h4><i><a href="mailto:scandari@gmail.com">Dario Scancarello</a></i></h4>
 <br><br>
 </div>
+<table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
+border="1">
+            <tr>
+  <th style="width:25%;text-align: center;padding: 3px;"><a href="#syntax">1. prova</a></th>
+  <th style="width:25%;text-align: center;padding: 3px;">Sigla</th>
+  <th style="width:25%;text-align: center;padding: 3px;">Schede A5</th>
+  <th style="width:25%;text-align: center;padding: 3px;">Schede A4</th>            
+            </tr>
+        </table>
 Questa è una raccolta di schede osservative che ho sviluppato principalmente per osservare il cielo profondo, anche se in seguito ho voluto inserire anche alcune stelle doppie. Mi piaceva l’idea di realizzare una sorta di programma osservativo valido tutto l’anno per evitare di pianificare la serata poco prima. Pianificare in anticipo è praticamente d’obbligo quando ci si trova a dover decidere l’uscita all’ultimo momento, complice anche l’incertezza delle condizioni meteo.
 <p><img
  title="immagine"
@@ -52,33 +61,31 @@ Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, sel
 <table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
 border="1">
             <tr>
-  <th style="width:36%;text-align: center;padding: 5px;">Costellazione</th>
-  <th style="width:10%;text-align: center;padding: 5px;">Sigla</th>
-  <th style="width:27%;text-align: center;padding: 5px;">Schede A5</th>
-  <th style="width:27%;text-align: center;padding: 5px;">Schede A4</th>            
+  <th style="width:36%;text-align: center;padding: 3px;">Costellazione</th>
+  <th style="width:10%;text-align: center;padding: 3px;">Sigla</th>
+  <th style="width:27%;text-align: center;padding: 3px;">Schede A5</th>
+  <th style="width:27%;text-align: center;padding: 3px;">Schede A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Coma Byrenices</td>
-		<td style="text-align: center;padding: 5px;">And</td>
-                <td style="text-align: center;padding: 5px;"><a href="#">And1-A5.pdf</a></td>
-                <td style="text-align: center;padding: 5px;"><a href="#">And-A4.pdf</a></td>
+                <td style="text-align: left;padding: 3px;">Coma Byrenices</td>
+		<td style="text-align: center;padding: 3px;">And</td>
+                <td style="text-align: center;padding: 3px;"><a href="#">And-A5.pdf</a></td>
+                <td style="text-align: center;padding: 3px;"><a href="#">And-A4.pdf</a></td>
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Antilia</td>	
-		<td style="text-align: center;padding: 5px;">Ant</td>
-                <td style="text-align: center;padding: 5px;">Ant-A5</td>
-                <td style="text-align: center;padding: 5px;">Ant-A4</td>
+                <td style="text-align: left;padding: 3px;">Antilia</td>	
+		<td style="text-align: center;padding: 3px;">Ant</td>
+                <td style="text-align: center;padding: 3px;">Ant-A5</td>
+                <td style="text-align: center;padding: 3px;">Ant-A4</td>
             </tr>
             <tr>
-                <td style="text-align: left;padding: 5px;">Aquarius</td>
-		<td style="text-align: center;padding: 5px;">Aqr</td>
-                <td style="text-align: center;padding: 5px;">Aqr-A5</td>
-                <td style="text-align: center;padding: 5px;">Aqr-A4</td>
+                <td style="text-align: left;padding: 3px;">Aquarius</td>
+		<td style="text-align: center;padding: 3px;">Aqr</td>
+                <td style="text-align: center;padding: 3px;">Aqr-A5</td>
+                <td style="text-align: center;padding: 3px;">Aqr-A4</td>
             </tr>
         </table>
-    </div>
-</body>
-</html>
+<br>
 <hr>
 <div style="text-align:center">
     <a href="index.html">Home</a> 
