--- a/astrocards.html
+++ b/astrocards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="it">
 <head>
 <title>Astro Cards</title>
 <META charset="utf-8">
@@ -13,6 +13,9 @@ float: none !important;
 font-family: "Helvetica", "Arial", sans-serif;
 line-height: 1.5;
 padding: 1em 1em;
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+          hyphens: auto;
 }
 .center {
 display: block;
