--- a/classiseconde.html
+++ b/classiseconde.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="it">
 <head>
 <!-- THIS IS A COMMENT -->
 <title>Classi prime</title>
@@ -14,6 +14,9 @@ body {
  font-family: "Helvetica", "Arial", sans-serif;
  line-height: 1.5;
   padding: 1em 1em;
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+          hyphens: auto;
 }
 .center {
   display: block;
