--- a/astrocards.html
+++ b/astrocards.html
@@ -33,6 +33,7 @@ margin-right: auto;
 .frontespizio h2 {text-align: center;margin-bottom:-20px;}
 .frontespizio h3 {text-align: center;margin-bottom:-15px;}
 .frontespizio h4 {text-align: center;font-weight:normal;margin-bottom:-20px;}
+.pippo dt {margin-bottom: 10px;}
 </style>
 </head>
 <body>
@@ -51,7 +52,8 @@ margin-right: auto;
  class="center"
  style="width:75%"></p>
 <p>Spinto da questa motivazione, ho iniziato a creare delle schede, una per ciascun oggetto, dove ci fosse praticamente tutto il necessario per individuarlo mediante lo star-hopping manuale e per osservarlo. Le schede sono state concepite per essere stampate e successivamente utilizzate con un classico raccoglitore ad anelli con buste in plastica perforate. Il maneggevole formato A5, unito alla possibilità di poter staccare dal raccoglitore la singola scheda per consultarla come unico riferimento direttamente al telescopio ne fanno uno strumento molto comodo da usare sul campo. Al fine di facilitare la lettura al buio, nella redazione delle schede, si è fatto uso esclusivamente del bianco e nero.</p>
-<p>Il metodo utilizzato per creare le schede è molto standardizzato e il sistema “a schede tipo” ha il vantaggio di poter sempre ampliare il numero di oggetti catalogati semplicemente creando una nuova scheda e ordinandola nel raccoglitore una di seguito all’altra, per costellazione e per ascensione retta (in ordine di transito al meridiano). Attualmente ho realizzato le schede relative ad un buon numero  gli oggetti, selezionati tra quelli più spettacolari.</p>
+<p>Il metodo utilizzato per creare le schede è molto standardizzato e il sistema “a schede tipo” ha il vantaggio di poter sempre ampliare il numero di oggetti catalogati semplicemente creando una nuova scheda e ordinandola nel raccoglitore una di seguito all’altra, per costellazione e per ascensione retta (in ordine di transito al meridiano). Attualmente ho realizzato le schede relative apiù di 500 oggetti, selezionati tra quelli più spettacolari.</p>
+<p>Questa raccolta nasce per una esigenza personale e mai avrei pensato di condividerla con altre persone. La creazione delle schede mi è costata parecchio tempo, dedicato sia alla progettazione delle “schede tipo” sia alla compilazione vera e propria delle stesse. Solo in seguito ho deciso di renderle disponibili gratuitamente a tutti. Spero che troverai questo lavoro particolarmente utile. Se preferisci, puoi contattarmi direttamente per condividere i tuoi pensieri o eventuali commenti.</p>
 
 <br><h3>Schede tipo "costellazione"</h3>
 <p>La scheda tipo della costellazione è costituita da due facciate (un intero foglio A5) e costituisce il frontespizio delle altre schede relative agli oggetti che saranno poste nelle pagine a seguire. La scheda, oltre a fornire una panoramica generale della costellazione, indica il periodo di osservazione più favorevole. 
@@ -91,7 +93,7 @@ La singola scheda tipo è strutturata in due facciate, nella prima troviamo:</p>
 <p><img
  title="immagine"
  src="z.png"
- class="left"
+ class="center"
  style="width:50%"></p>
 La singola scheda é strutturata in una sola facciata dove sono riportate:</p>
 <ul>
@@ -103,7 +105,6 @@ La singola scheda é strutturata in una sola facciata dove sono riportate:</p>
 </ul>
 
 <br><h3>Download</h3>
-<p>Questa raccolta nasce per una esigenza personale e mai avrei pensato di condividerla con altre persone. La creazione delle schede mi è costata parecchio tempo, dedicato sia alla progettazione delle “schede tipo” sia alla compilazione vera e propria delle stesse. Solo in seguito ho deciso di renderle disponibili gratuitamente a tutti. Spero che troverai questo lavoro particolarmente utile. Se preferisci, puoi contattarmi direttamente per condividere i tuoi pensieri o eventuali commenti.</p>
 <p>Di seguito trovi link per scaricare le schede in formato PDF, suddivise per costellazione. Il formato altamente consigliato per l'utilizzo sul campo è quello A5. Ho scelto ugualmente di rendere disponibile il formato A4 perchè può risultare preferibile per la consultazione a casa.</p>
 
 <table style="width:100%;margin-left:auto; margin-right:auto;border: 1px solid black;border-collapse: collapse;"
@@ -142,22 +143,67 @@ border="1">
  class="center"
  style="width:60%"></p>
 
-<br><h3>Principali riferimenti utilizzati</h3>
-<ul>
-<li>Le schede PDF, sono state relizzate tramite LuaTeX nella distribuzione MiKTeX <a href="https://miktex.org/">(https://miktex.org/)</a></td></li>
-<li>Le mappe del cielo sono state ricavate tramite SkySafari Pro 6 <a href="https://www.skysafariastronomy.com/">(https://www.skysafariastronomy.com/)</a></td></li>
-<li>I nomi e le sigle delle costellazioni sono quelli ufficiali ricavati dalla International Astronomical Union (https://www.iau.org/)</li>
-<li>Il baricentro e i confini di ogni costellazione sono state ricavate dai dati disponibili sul sito di Pierre Barbier (https://pbarbier.com/)</li>
-<li>Per il calcolo delle effemeridi (valide con piccoli scarti sul tutto il territorio nazionale) sono state utilizzate alcune utility ospitate sul sito di Pier Paolo Ricci (http://www.pierpaoloricci.it/)</li>
-<li>I grafici di osservabilità sono stati ottenuti tramite Gnuplot (http://www.gnuplot.info/)</li>
-<li>Le coordinate delle stelle di riferimento per lo star-hopping sono state ricavate da “The Mag 5 Star Catalog”, versione ridotta del “ Yale Bright Star Catalog” disponibile sul sito di John P. Pratt (https://www.johnpratt.com/)</li>
-<li>I dati tecnici tabellari inerenti gli oggetti deep sky sono ricavati dal catalogo SAC versione 8.1 pubblicato da “The Saguaro Astronomy Club” (https://www.saguaroastro.org/)</li>
-<li>I dati tecnici inerenti le stelle doppie sono ricavati ed adattati dal “Washington Double Star Catalog” nella versione attualmente utilizzata dal sito realizzato da Gianluca Sordiglioni (https://www.stelledoppie.it/)</li>
-<li>Le fotografie degli oggetti sono tratte dalla “Digitized Sky Survey” (https://stdatu.stsci.edu/cgi-bin/dss_form)</li>
-<li>Per la selezione degli oggetti finora schedati, si sono esclusi quelli ad una declinazione inferiore a -50° e si è fatto riferimento ad alcune liste: “Finest NGC Objects” compilata da Alan Dyer e pubblicata sul sito de “Royal Astronomical Society of Canada” (https://www.rasc.ca/); “Orion DeepMap 600” redatta da Steve Gottlieb e pubblicata nell’omonima mappa edita da “Orion Telescopes &amp; Binoculars” (https://www.telescope.com/); &quot;500 Best DSO list&quot; redatta da Don Pensack e pubblicata sun noto forum statunitense Cloudy Nights (https://www.cloudynights.com/topic/472872-500-best-dso-list/?p=6165843).</li>
-<li>Le descrizioni generali degli oggetti provengono da diverse fonti (se necessario liberamente adattate e tradotte): “The Night Sky Observer's Guide” -  di G. R. Kepple, G. Sanner, in 4 volumi editi da Willmann-Bell; “Observing Handbook and Catalogue of Deep-Sky Objects” -  di Christian B. Luginbuhl, Brian A. Skiff, editi da Cambridge University Press; “Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing; Vari libri e siti web in ordine sparso tra cui: (https://www.wikipedia.org/),( https://divulgazione.uai.it/), (https://www.webbdeepsky.com/double-stars/), (https://bestdoubles.wordpress.com/), (https://www.cloudynights.com/).</li>
-</ul>
-
+<br><h3>Link e riferimenti</h3>
+Oltre ad aver consultato diversi libri e siti web in ordine sparso, di seguito elenco i riferimenti principali utilizzati per la redezione delle schede:
+<div class="pippo">
+<dl>
+<dt><a href="https://miktex.org/"><b>MiKTeX:</b></a>
+per la realizzazione delle schede PDF si è usato LuaTeX nella distribuzione MiKTeX.
+</dt>
+<dl>
+<dt><a href="(https://www.skysafariastronomy.com/"><b>SkySafari Pro 6:</b></a>
+Le mappe del cielo sono state ricavate tramite
+</dt>
+<dt><a href="(https://www.iau.org/"><b>International Astronomical Union:</b></a>
+I nomi e le sigle delle costellazioni sono quelli ufficiali
+</dt>
+<dt><a href="https://pbarbier.com/"><b>Sito di Pierre Barbier:</b></a>
+l baricentro e i confini di ogni costellazione sono state ricavate dai dati disponibili 
+</dt>
+</dt>
+<dt><a href="http://www.pierpaoloricci.it/"><b>Sito di Pier Paolo Ricci:</b></a>
+Per il calcolo delle effemeridi sono state utilizzate alcune utility 
+</dt>
+<dt><a href="http://www.gnuplot.info/"><b>Gnuplot:</b></a>
+I grafici di osservabilità sono stati ottenuti tramite Gnuplot (http://www.gnuplot.info/)
+</dt>
+<dt><a href="https://www.johnpratt.com/"><b>Sito di John P. Pratt:</b></a>
+Le coordinate delle stelle di riferimento per lo star-hopping sono state ricavate da “The Mag 5 Star Catalog”, versione ridotta del “ Yale Bright Star Catalog”
+</dt>
+<dt><a href="https://www.saguaroastro.org/"><b>The Saguaro Astronomy Club:</b></a>
+I dati tecnici tabellari inerenti gli oggetti deep sky sono ricavati dal catalogo SAC versione 8.1 pubblicato da “The Saguaro Astronomy Club” (https://www.saguaroastro.org/)
+</dt>
+<dt><a href="https://www.stelledoppie.it/"><b>Stelle Doppie:</b></a>
+I dati tecnici inerenti le stelle doppie sono ricavati ed adattati dal “Washington Double Star Catalog” nella versione attualmente utilizzata dal sito realizzato da Gianluca Sordiglioni
+</dt>
+<dt><a href="https://stdatu.stsci.edu/cgi-bin/dss_form"><b>Digitized Sky Survey:</b></a>
+Le fotografie degli oggetti sono tratte dalla “Digitized Sky Survey”
+</dt>
+</dt>
+<dt><a href="https://www.rasc.ca/"><b>Royal Astronomical Society of Canada:</b></a>
+Per la selezione degli oggetti finora schedati si è fatto riferimento ad alcune liste: “Finest NGC Objects” compilata da Alan Dyer e pubblicata sul sito de “Royal Astronomical Society of Canada” (https://www.rasc.ca/)
+</dt>
+<dt><a href="https://www.telescope.com/Orion-DeepMap-600-Folding-Star-Chart/p/4150.uts"><b>Orion DeepMap 600:</b></a>
+“Orion DeepMap 600” redatta da Steve Gottlieb e pubblicata nell’omonima mappa edita da “Orion Telescopes & Binoculars” (https://www.telescope.com/);
+</dt>
+<dt><a href="https://www.cloudynights.com/topic/472872-500-best-dso-list/?p=6165843"><b>500 Best DSO list:</b></a>
+"500 Best DSO list" redatta da Don Pensack e pubblicata sun noto forum statunitense Cloudy Nights ().
+</dt>
+<dt><a href="https://shopatsky.com/collections/willmann-bell/willmann-bell"><b>The Night Sky Observer's Guide:</b></a>
+e descrizioni generali degli oggetti provengono da diverse fonti (se necessario liberamente adattate e tradotte): “The Night Sky Observer's Guide” - di G. R. Kepple, G. Sanner, in 4 volumi editi da Willmann-Bell;
+</dt>
+<dt><a href="https://www.cambridge.org/"><b>Observing Handbook and Catalogue of Deep-Sky Objects:</b></a>
+“Observing Handbook and Catalogue of Deep-Sky Objects” - di Christian B. Luginbuhl, Brian A. Skiff, editi da Cambridge University Press; 
+</dt>
+<dt><a href="https://www.amazon.com/Double-Stars-Small-Telescopes-Stargazing/dp/1931559325"><b>Double Stars for Small Telescopes:</b></a>
+“Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing Corporation; 
+</dt>
+</dt>
+<dt><a href="https://www.wikipedia.org/"><b>Wikipedia:</b></a>
+“Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing Corporation; 
+</dt>
+</dl>
+</div>
 <br>
 <hr>
 <div style="text-align:center">
