--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="it">
 <head>
 <!-- THIS IS A COMMENT -->
 <title>Home Page di Dario Scancarello</title>
