--- a/astrocards.html
+++ b/astrocards.html
@@ -116,7 +116,7 @@ border="1">
   <th style="width:27%;text-align: center;padding: 3px;">Schede A4</th>            
             </tr>
             <tr>
-                <td style="text-align: left;padding: 3px;">Coma Byrenices</td>
+                <td style="text-align: left;padding: 3px;">Andromeda</td>
 		<td style="text-align: center;padding: 3px;">And</td>
                 <td style="text-align: center;padding: 3px;"><a href="#">And-A5.pdf</a></td>
                 <td style="text-align: center;padding: 3px;"><a href="#">And-A4.pdf</a></td>
