--- a/classiseconde/classiseconde.html
+++ b/classiseconde/classiseconde.html
@@ -32,7 +32,7 @@ h2 {text-align: center;}
 </head>
 
 <body>
-<a href="index.html">Home</a>
+<a href="../index.html">Home</a>
 <hr>
 <div class="frontespizio">
 <h2>Materiale didattico di tecnologia per le classi seconde</h2>
@@ -51,7 +51,7 @@ h2 {text-align: center;}
 <br>
 <hr>
 <div style="text-align:center">
-    <a href="index.html">Home</a> 
+<a href="../index.html">Home</a>
 </div>
 </body>
 </html>
