--- a/classiterze/classiterze.html
+++ b/classiterze/classiterze.html
@@ -30,11 +30,12 @@ h2 {text-align: center;}
 .frontespizio h4 {text-align: center;font-weight:normal;margin-bottom:-20px;}
 </style>
 </head>
+
 <body>
-<a href="index.html">Home</a>
+<a href="../index.html">Home</a>
 <hr>
 <div class="frontespizio">
-<h2>Materiale didattico di tecnologia per le classi prime</h2>
+<h2>Materiale didattico di tecnologia per le classi terze</h2>
 <h4><i><a href="mailto:scandari@gmail.com">Prof. Dario Scancarello</a></i></h4>
 <br><br><br>
 </div>
@@ -45,12 +46,12 @@ h2 {text-align: center;}
 <br>
 <b>📐 DISEGNO</b>
 <ul>
-<li><a href="#">Materiali e attrezzature necessarie</a>
+<li><a href="#">Le attrezzature per il disegno</a>
 </ul>
 <br>
 <hr>
 <div style="text-align:center">
-    <a href="index.html">Home</a> 
+<a href="../index.html">Home</a>
 </div>
 </body>
 </html>
