--- a/Astrocards/astrocards.html
+++ b/Astrocards/astrocards.html
@@ -37,7 +37,7 @@ margin-right: auto;
 </style>
 </head>
 <body>
-<a href="index.html">Home</a>
+<a href="../index.html">Home</a>
 <hr>
 <div class="frontespizio">
 <h1>Astro Cards</h1>
@@ -51,6 +51,9 @@ margin-right: auto;
  src="A.jpg"
  class="center"
  style="width:75%"></p>
+<span style="font-size:90%">
+<center><i><b>In figura:</b> le schede stampate e rilegate tramite un classico raccoglitore A5 per l'uso sul campo</i></center>
+</span>
 <p>Spinto da questa motivazione, ho iniziato a creare delle schede, una per ciascun oggetto, dove ci fosse praticamente tutto il necessario per individuarlo mediante lo star-hopping manuale e per osservarlo. Le schede sono state concepite per essere stampate e successivamente utilizzate con un classico raccoglitore ad anelli con buste in plastica perforate. Il maneggevole formato A5, unito alla possibilità di poter staccare dal raccoglitore la singola scheda per consultarla come unico riferimento direttamente al telescopio ne fanno uno strumento molto comodo da usare sul campo. Al fine di facilitare la lettura al buio, nella redazione delle schede, si è fatto uso esclusivamente del bianco e nero.</p>
 <p>Il metodo utilizzato per creare le schede è molto standardizzato e il sistema “a schede tipo” ha il vantaggio di poter sempre ampliare il numero di oggetti catalogati semplicemente creando una nuova scheda e ordinandola nel raccoglitore una di seguito all’altra, per costellazione e per ascensione retta (in ordine di transito al meridiano). Attualmente ho realizzato le schede relative apiù di 500 oggetti, selezionati tra quelli più spettacolari.</p>
 <p>Questa raccolta nasce per una esigenza personale e mai avrei pensato di condividerla con altre persone. La creazione delle schede mi è costata parecchio tempo, dedicato sia alla progettazione delle “schede tipo” sia alla compilazione vera e propria delle stesse. Solo in seguito ho deciso di renderle disponibili gratuitamente a tutti. Spero che troverai questo lavoro particolarmente utile. Se preferisci, puoi contattarmi direttamente per condividere i tuoi pensieri o eventuali commenti.</p>
@@ -118,8 +121,8 @@ border="1">
             <tr>
                 <td style="text-align: left;padding: 3px;">Andromeda</td>
 		<td style="text-align: center;padding: 3px;">And</td>
-                <td style="text-align: center;padding: 3px;"><a href="#">And-A5.pdf</a></td>
-                <td style="text-align: center;padding: 3px;"><a href="#">And-A4.pdf</a></td>
+                <td style="text-align: center;padding: 3px;"><a href="./files/And-A5.pdf">And-A5.pdf</a></td>
+                <td style="text-align: center;padding: 3px;"><a href="./files/And-A4.pdf">And-A4.pdf</a></td>
             </tr>
             <tr>
                 <td style="text-align: left;padding: 3px;">Antilia</td>	
@@ -151,63 +154,65 @@ Oltre ad aver consultato diversi libri e siti web in ordine sparso, di seguito e
 per la realizzazione delle schede PDF si è usato LuaTeX nella distribuzione MiKTeX.
 </dt>
 <dl>
-<dt><a href="(https://www.skysafariastronomy.com/"><b>SkySafari Pro 6:</b></a>
-Le mappe del cielo sono state ricavate tramite
+<dt><a href="https://www.skysafariastronomy.com/"><b>SkySafari Pro 6:</b></a>
+Da cui sono state ricavate ed adattate le mappe del cielo.
 </dt>
-<dt><a href="(https://www.iau.org/"><b>International Astronomical Union:</b></a>
-I nomi e le sigle delle costellazioni sono quelli ufficiali
+<dt><a href="https://www.iau.org/"><b>International Astronomical Union:</b></a>
+per i nomi e le sigle delle costellazioni ufficiali.
 </dt>
 <dt><a href="https://pbarbier.com/"><b>Sito di Pierre Barbier:</b></a>
-l baricentro e i confini di ogni costellazione sono state ricavate dai dati disponibili 
-</dt>
+Da dove si sono ricavati dati relativi al baricentro e ai confini delle costellazioni.
 </dt>
 <dt><a href="http://www.pierpaoloricci.it/"><b>Sito di Pier Paolo Ricci:</b></a>
-Per il calcolo delle effemeridi sono state utilizzate alcune utility 
+Per le utility utilizzate per il calcolo delle effemeridi.
 </dt>
 <dt><a href="http://www.gnuplot.info/"><b>Gnuplot:</b></a>
-I grafici di osservabilità sono stati ottenuti tramite Gnuplot (http://www.gnuplot.info/)
+Utilizzato per tracciare i grafici di osservabilità.
 </dt>
 <dt><a href="https://www.johnpratt.com/"><b>Sito di John P. Pratt:</b></a>
-Le coordinate delle stelle di riferimento per lo star-hopping sono state ricavate da “The Mag 5 Star Catalog”, versione ridotta del “ Yale Bright Star Catalog”
+Da dove si sono tratte le coordinate delle stelle di riferimento per lo star-hopping. Nello specifico dal da “The Mag 5 Star Catalog”, versione ridotta del “ Yale Bright Star Catalog”
 </dt>
 <dt><a href="https://www.saguaroastro.org/"><b>The Saguaro Astronomy Club:</b></a>
-I dati tecnici tabellari inerenti gli oggetti deep sky sono ricavati dal catalogo SAC versione 8.1 pubblicato da “The Saguaro Astronomy Club” (https://www.saguaroastro.org/)
+I dati tecnici tabellari inerenti gli oggetti deep sky sono ricavati dal catalogo SAC versione 8.1.
 </dt>
 <dt><a href="https://www.stelledoppie.it/"><b>Stelle Doppie:</b></a>
-I dati tecnici inerenti le stelle doppie sono ricavati ed adattati dal “Washington Double Star Catalog” nella versione attualmente utilizzata dal sito realizzato da Gianluca Sordiglioni
+I dati tecnici inerenti le stelle doppie sono ricavati ed adattati dal “Washington Double Star Catalog” nella versione attualmente utilizzata da questo sito realizzato da Gianluca Sordiglioni
 </dt>
 <dt><a href="https://stdatu.stsci.edu/cgi-bin/dss_form"><b>Digitized Sky Survey:</b></a>
-Le fotografie degli oggetti sono tratte dalla “Digitized Sky Survey”
+Per le fotografie degli oggetti.
 </dt>
 </dt>
 <dt><a href="https://www.rasc.ca/"><b>Royal Astronomical Society of Canada:</b></a>
-Per la selezione degli oggetti finora schedati si è fatto riferimento ad alcune liste: “Finest NGC Objects” compilata da Alan Dyer e pubblicata sul sito de “Royal Astronomical Society of Canada” (https://www.rasc.ca/)
+Per la selezione degli oggetti, “Finest NGC Objects” compilata da Alan Dyer.
 </dt>
 <dt><a href="https://www.telescope.com/Orion-DeepMap-600-Folding-Star-Chart/p/4150.uts"><b>Orion DeepMap 600:</b></a>
-“Orion DeepMap 600” redatta da Steve Gottlieb e pubblicata nell’omonima mappa edita da “Orion Telescopes & Binoculars” (https://www.telescope.com/);
+Per la selezione degli oggetti, “Orion DeepMap 600” redatta da Steve Gottlieb e pubblicata nell’omonima mappa edita da “Orion Telescopes & Binoculars”.
 </dt>
 <dt><a href="https://www.cloudynights.com/topic/472872-500-best-dso-list/?p=6165843"><b>500 Best DSO list:</b></a>
-"500 Best DSO list" redatta da Don Pensack e pubblicata sun noto forum statunitense Cloudy Nights ().
+Per la selezione degli oggetti, "500 Best DSO list" redatta da Don Pensack e pubblicata sun noto forum statunitense Cloudy Nights.
+</dt>
+<dt><a href="https://www.astroleague.org/herschel-400-observing-program/"><b>Herschel 400:</b></a>
+Per la selezione degli oggetti, la famosa lista di oggetti tratti dal catalogo di William Herschel e selezionati da alcuni membri del Ancient City Astronomy Club di St. Augustine, Florida.
 </dt>
 <dt><a href="https://shopatsky.com/collections/willmann-bell/willmann-bell"><b>The Night Sky Observer's Guide:</b></a>
-e descrizioni generali degli oggetti provengono da diverse fonti (se necessario liberamente adattate e tradotte): “The Night Sky Observer's Guide” - di G. R. Kepple, G. Sanner, in 4 volumi editi da Willmann-Bell;
+Per le descrizioni generali degli oggetti, liberamente adattate da “The Night Sky Observer's Guide” - di G. R. Kepple, G. Sanner, in 4 volumi editi da Willmann-Bell;
 </dt>
 <dt><a href="https://www.cambridge.org/"><b>Observing Handbook and Catalogue of Deep-Sky Objects:</b></a>
-“Observing Handbook and Catalogue of Deep-Sky Objects” - di Christian B. Luginbuhl, Brian A. Skiff, editi da Cambridge University Press; 
+Per le descrizioni generali degli oggetti, liberamente adattate da “Observing Handbook and Catalogue of Deep-Sky Objects” - di Christian B. Luginbuhl, Brian A. Skiff, editi da Cambridge University Press; 
 </dt>
 <dt><a href="https://www.amazon.com/Double-Stars-Small-Telescopes-Stargazing/dp/1931559325"><b>Double Stars for Small Telescopes:</b></a>
-“Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing Corporation; 
+Per le descrizioni generali degli oggetti, liberamente adattate da “Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing Corporation; 
 </dt>
 </dt>
 <dt><a href="https://www.wikipedia.org/"><b>Wikipedia:</b></a>
-“Double Stars for Small Telescopes” – di Sissy Haas, edito da Sky Publishing Corporation; 
+Per le descrizioni generali degli oggetti, liberamente adattate.
 </dt>
 </dl>
 </div>
 <br>
 <hr>
 <div style="text-align:center">
-    <a href="index.html">Home</a> 
+<a href="../index.html">Home</a>
 </div>
 </body>
 </html>
