--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia n
 <br>
 <b>📚 MATERIALE DIDATTICO DI TECNOLOGIA</b>
 <ul>
-<li><a href="classiprime.html">Classi prime</a>
-<li><a href="classiseconde.html">Classi seconde</a>
-<li><a href="classiterze.html">Classi terze</a>
+<li><a href="./classiprime/classiprime.html">Classi prime</a>
+<li><a href="./classiseconde/classiseconde.html">Classi seconde</a>
+<li><a href="./classiterze/classiterze.html">Classi terze</a>
 </ul>
 <br>
 <b>⭐ ASTRONOMIA PRATICA</b>
 <ul>
-<li><a href="astrocards.html">Astro Cards</a>: schede da stampare in formato PDF per l'osservazione degli oggetti più belli del cielo.
+<li><a href="./astrocards/astrocards.html">Astro Cards</a>: schede da stampare in formato PDF per l'osservazione degli oggetti più belli del cielo.
 </ul>
 <br>
 <hr>
