--- a/Astrocards/astrocards.html
+++ b/Astrocards/astrocards.html
@@ -70,7 +70,7 @@ Nella prima facciata abbiamo una mappa a largo campo dell'intera costellazione e
 <br><h3>Schede tipo "oggetti del cielo profondo"</h3>
 <p>Queste schede tipo sono state singolarmente concepite per avere immediatamente a portata di mano tutte le informazioni principali per puntare ed osservare una selezione dei più interessanti oggetti del cielo profondo  fino ad una declinazione di -50°.
 <p><img
- title="immagine"
+ title="immagines"
  src="b.png"
  class="center"
  style="width:100%"></p>
