--- a/astrocards/astrocards.html
+++ b/astrocards/astrocards.html
@@ -48,7 +48,7 @@ margin-right: auto;
 <p>Questo lavoro è una raccolta di schede osservative che ho sviluppato principalmente per osservare il cielo profondo, anche se in seguito ho voluto inserire anche alcune stelle doppie. Mi piaceva l’idea di realizzare una sorta di programma osservativo valido tutto l’anno per evitare di pianificare la serata poco prima. Pianificare in anticipo è praticamente d’obbligo quando ci si trova a dover decidere l’uscita all’ultimo momento, complice anche l’incertezza delle condizioni meteo. </p>
 <p><img
  title="immagine"
- src="A.jpg"
+ src="a.jpg"
  class="center"
  style="width:75%"></p>
 <span style="font-size:90%">
