--- a/astrocards/astrocards.html
+++ b/astrocards/astrocards.html
@@ -102,7 +102,7 @@ La singola scheda é strutturata in una sola facciata dove sono riportate:</p>
 <ul>
 <li>Indicazione della sigla IAU della costellazione e del nome della stella doppia, compresa la denominazione WDS della componente principale.</li>
 <li>Mappa a largo campo per l'utilizzo a occhio nudo con cerchi Telrad centrati sulla stella doppia. Quando il caso lo ha richiesto, è stata riportata la stella di riferimento scelta per lo star-hopping e la relativa distanza da quest'ultima.</li>
-<li>Mappa più dettagliata per lo star-hopping al cercatore o al telescopio. Il campo inquadrato è sempre indicato nell'angolo0ppp in basso a sinistra.</li>
+<li>Mappa più dettagliata per lo star-hopping al cercatore o al telescopio. Il campo inquadrato è sempre indicato nell'angolo in basso a sinistra.</li>
 <li>Riquadro con breve descrizione testuale del sistema.</li>
 <li>Tabella con dati tecnici relativi alle componenti principali ricavati dall'ultimo aggiornamento del catalogo WDS.</li>
 </ul>
