--- a/astrocards/astrocards.html
+++ b/astrocards/astrocards.html
@@ -197,7 +197,7 @@ Per la selezione degli oggetti, la famosa lista di oggetti tratti dal catalogo d
 <dt><a href="https://shopatsky.com/collections/willmann-bell/willmann-bell"><b>The Night Sky Observer's Guide:</b></a>
 Per le descrizioni generali degli oggetti, liberamente adattate da “The Night Sky Observer's Guide” - di G. R. Kepple, G. Sanner, in 4 volumi editi da Willmann-Bell;
 </dt>
-<dt><a href="https://www.cambridge.org/"><b>Observing Handbook and Catalogue of Deep-Sky Objects:</b></a>
+<dt><a href="https://www.cambridge.org/gb/universitypress/subjects/physics/amateur-and-popular-astronomy/observing-handbook-and-catalogue-deep-sky-objects"><b>Observing Handbook and Catalogue of Deep-Sky Objects:</b></a>
 Per le descrizioni generali degli oggetti, liberamente adattate da “Observing Handbook and Catalogue of Deep-Sky Objects” - di Christian B. Luginbuhl, Brian A. Skiff, editi da Cambridge University Press; 
 </dt>
 <dt><a href="https://www.amazon.com/Double-Stars-Small-Telescopes-Stargazing/dp/1931559325"><b>Double Stars for Small Telescopes:</b></a>
