--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Mi chiamo Dario Scancarello, sono un ingegnere ambientale e insegno tecnologia n
 <li><a href="./classiterze/classiterze.html">Classi terze</a>
 </ul>
 <br>
-<b>⭐ ASTRONOMIA PRATICA</b>
+<b>⭐ ASTRONOMIA PRATIC</b>
 <ul>
 <li><a href="./astrocards/astrocards.html">Astro Cards</a>: schede da stampare in formato PDF per l'osservazione degli oggetti più belli del cielo.
 </ul>
