--- a/index.html
+++ b/index.html
@@ -3,21 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materiale didattico di Tecnologia</title>
+    <title>Home page di Dario Scancarello</title>
 </head>
 <body>
  <main>
-<img src="banner.png" alt="banner2">
-<h1>Materiale didattico</h1></a>
-        <section id="home">
-            <a href="#home"><h1>Classi prime</h1></a>
-</section>
-        <section id="home">
-            <a href="#home"><h1>Classi seconde</h1></a>  
-</section>
-        <section id="home">
-            <a href="#home"><h1>Classi terze</h1></a>
-</section>
+<h1>Dario Scancarello</h1></a>
+<hr>
 </main>
 </body>
 </html>
